<resources>
    <string name="app_name">Trackahol</string>

    <!-- Button Strings -->
    <string name="drink_volumes">Drinks &amp; Typical Quantities</string>
    <string name="tips">What 14 Units Looks Like</string>
    <string name="main_add_data">"Add Drinks"</string>
    <string name="main_check_data">"List Drinks"</string>


    <!-- TextView Strings -->
    <string name="home_page">Did you know that 1 in 4 people (24%) in Scotland are at risk of harming themselves from the dangerous effects
    of alcohol?\n\n Or that there was an estimated 94,360 appointments made with GPs by 48,420 patients in 2019? That\'s almost double the appointments
    per patient with alcohol issues!\n\nIt is recommended that you drink no more than 14 units of alcohol per week, spread over 4-5 days. Please check the button
    labelled \'What 14 Units Looks Like\' for more information.</string>

    <string name="recommended">Need help with counting 14 units? Let me help you…</string>
    <string name="alc_mgmt_1">7 double measures of spirits (50ml @ 40% abv)</string>
    <string name="alc_mgmt_2">5 pints of lager (586ml @ 4.5% abv)</string>
    <string name="alc_mgmt_3">8 glasses of wine (175ml @ 10% abv)</string>
    <string name="alc_mgmt_4">9 shots of absinthe (25ml @ 60% abv)</string>
    <string name="alc_mgmt_5">31 shots of alcohol (25ml @ 18% abv)</string>

    <!-- Image Descriptions -->
    <string name="whisky_desc">A 50ml glass of whisky at 40% abv</string>
    <string name="lager_desc">A 586ml pint of lager at 4.5% abv</string>
    <string name="wine_desc">A 175ml glass of wine at 10% abv</string>
    <string name="absinthe_desc">A 25ml shot of absinthe at 60% abv</string>
    <string name="shot_desc">A 25ml shot of spirits at 20% abv</string>

    <!-- Database Strings -->

    <string name="add_data_title">Fill Information</string>
    <string name="add_data_field_name">Name:</string>
    <string name="add_data_field_phone_number">ABV:</string>
    <string name="add_data_field_email">Volume (automatically in ml):</string>
    <string name="add_data_button_save">Save</string>
    <string name="add_data_button_back">Main Menu</string>
    <string name="reminder">Please include the contact of alcohol ONLY.\n\nA Gin &amp; Tonic would be 25 in field \"Volume\".</string>

    <string name="add_next_dialog_message">"Information saved. Add another drink?"</string>
    <string name="add_next_dialog_confirm_yes">"Yes"</string>
    <string name="add_next_dialog_confirm_no">"No"</string>

    <string name="check_data_title">"NAME    -    ABV    -    VOLUME    -    UNITS    -     TIMESTAMP"</string>
</resources>
