<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/add_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data_field_name" />

    <EditText
        android:id="@+id/add_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/add_tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data_field_phone_number" />

    <EditText
        android:id="@+id/add_etABV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/add_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data_field_email" />

    <EditText
        android:id="@+id/add_etVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_data_button_save" />

        <Button
            android:id="@+id/add_btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_data_button_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/reminder"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>